Feat: evolucao (#13)
Update project to java quarkus